# reveng

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  output.json  pre-commit-config.yaml  pyproject.toml
src/environment_generator/: custom_minigrid.py  main.py  requirements_temp.txt  text_obs_wrapper.py
src/reveng/: datatypes.py  llm_interface.py
src/reveng/agents/: __init__.py  agent_abc.py  alpha_start_agent.py  llm_agent.py  llm_templates.py  random_agent.py
src/reveng/analysis/: .gitignore  analysis_utils.py  compare_models.py  compare_models_isotransform.py  full_obs_trajectory_analysis.py  full_obs_trajectory_isotransform_analysis.py  grid_inspector_cli.py  run_analysis.py  run_analysis_isotransform.py  trajectory_analysis.py  uncertainty_analysis.py
src/reveng/analysis_decoded_grids/: create_latex_table.py  decoded_grids_analysis.py
src/reveng/commands/: cli.py  generate_counterfactual_grids.py
src/reveng/environment_generator/: coin_minigrid.py  custom_minigrid.py  env_plots.py  env_transformations.py  filter_decoder_training_csv.py  get_grids_for_probing.py  iso_difficulty_transformations.py  key_minigrid.py  main.py  rooms_minigrid.py  setbacks.py  text_obs_wrapper.py  utils.py
src/reveng/experiments/: .gitignore  baseline.py  coin_experiments.py  extract_action_prob_utils.py  full_policy_experiments.py  generate_dataset.py  generate_dataset_isodifficulty.py  instrumental_goals_experiments.py  (+4 more)
tests/: test_generate_counterfactual_grids.py  test_generate_trajectory_reset.py  test_goal_exists.py  test_is_solvable.py
(+263 files in other folders)
