[project]
name = "reveng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "gymnasium==1.2.0",
    "isort>=6.0.1",
    "jinja2>=3.1.0",
    "litellm>=1.77.1",
    "matplotlib>=3.10.6",
    "minigrid==3.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "tenacity>=9.1.2",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
