[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reveng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "gymnasium==1.2.0",
    "imageio>=2.37.0",
    "isort>=6.0.1",
    "jinja2>=3.1.0",
    "litellm>=1.77.1",
    "matplotlib>=3.10.6",
    "minigrid==3.0.0",
    "pydantic>=2.0.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.0.0",
    "tenacity>=9.1.2",
    "pandas>=2.3.3",
    "pip>=25.2",
    "tqdm>=4.67.1",
    "scipy>=1.16.2",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
